<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seo.wonwo.hotrepos.com.seo.wonwo.hotrepos.Visualization">

    <android.support.v7.widget.Toolbar
        android:id="@+id/appbar_visualization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/visualization_barchart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar_visualization"/>

    <TextView
        android:id="@+id/visualization_nodata"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="No cached data; try again later."
        android:textStyle="italic"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
